Ability to save examples to a file and to read items back out again.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ doc
 pkg
 
 .DS_Store
+spec/temp/**/*
 
 # Have editor/IDE/OS specific files you need to ignore? Consider using a global gitignore: 
 #
